fix panel overlapping

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -699,7 +699,7 @@ body {
 
 #edit-panel {
     position: fixed;
-    top: 20px;
+    top: 68px;
     right: -420px;
     width: 340px;
     max-width: calc(100vw - 40px);
@@ -709,7 +709,7 @@ body {
     box-shadow: -3px 4px 24px rgba(0, 0, 0, 0.4);
     z-index: 250;
     transition: right 0.28s ease;
-    max-height: calc(100vh - 40px);
+    max-height: calc(100vh - 88px);
     overflow-y: auto;
 }
 
